# scratchnative

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  project.json  requirements.txt
runtime/: scratchnative.hpp
scripts/: scratch2exe.py  test
src/: codegen.rs  data.cpp  main.cpp  main.rs  operator.cpp  scratch2native.cpp  scratch2native.hpp
src/parser/: ast.rs  json.rs  mod.rs
src/parser/ast/: control.rs  data.rs  event.rs  mod.rs  operator.rs  procedures.rs
