[package]
name = "scratchnative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.5"
colored = "2.0.0"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
simplelog = "0.12.1"
